Fixed bug on mobile version for Education page

--- a/reactfirst/src/Components/EducationCards.css
+++ b/reactfirst/src/Components/EducationCards.css
@@ -6,7 +6,7 @@
     justify-content: center;
     text-align: center;
     background-color: var(--primary-color);
-    width: 100%;
+    width: 80vw;
 }
 
 .ClassCard {
